--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "react-native": "0.66.4",
     "react-native-gesture-handler": "^2.5.0",
     "react-native-safe-area-context": "^4.3.1",
-    "react-native-screens": "^3.14.1"
+    "react-native-screens": "^3.14.1",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
+    "redux-saga": "^1.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
