deeplinking for android.

--- a/ios/tiklagelsin/Info.plist
+++ b/ios/tiklagelsin/Info.plist
@@ -25,6 +25,8 @@
 		<dict>
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>tiklagelsin</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>app</string>
