--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-native-screens": "^3.14.1",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "uri-scheme": "^1.0.120"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
